--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="text" class="word-input" />
         </div>
         <div class="game-info">
-            <div>남은 시간 :<span class="time">  </span>초</div>
+            <div>남은 시간 :<span class="time"> 120 </span>초</div>
             <div>획득 점수 :<span class="score"> 0 </span>점</div>
         </div>
 
