복사금지 기능 추가

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+
     <div class="header">
         <h1>백지한 명대사 타자게임</h1>
     </div>
 
-    <div class="progress">
+    <div class="progress">`
         <div class="progress__bar"></div>
     </div>
 
