api, Toastify 적용

--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>타이핑게임</title>
-    <script src="js/node_modules/toastify-js/src/toastify.js"></script>
-    <link rel="stylesheet" href="js/node_modules/toastify-js/src/toastify.css" />
+    <link rel="shortcut icon" href="#">
+    <script src="/node_modules/axios/dist/axios.js"></script>
+    <script src="/node_modules/toastify-js/src/toastify.js"></script>
+    <link rel="stylesheet" href="node_modules/toastify-js/src/toastify.css" />
 
     <link rel="stylesheet" href="css/style.css" />
+
 </head>
 
-<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+<body ondragstart="return false" onselectstart="return false">
 
     <div class="header">
-        <h1>백지한 명대사 타자게임</h1>
+        <h1>Let's Typing Game!</h1>
     </div>
 
-    <div class="progress">`
+    <div class="progress">
         <div class="progress__bar"></div>
     </div>
 
     <div class="section">
-        <div id="check_btn" class=" word-display">띄어쓰기, 문장기호 다 맞아야 함 </div>
+        <div id="check_btn" class=" word-display">API , Toastify 사용하기 Project</div>
         <div class="word-input-box ">
             <input type="text" class="word-input" />
         </div>
