--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <div class="section">
-        <div id="check_btn" class=" word-display">API , Toastify 사용하기 Project</div>
+        <div id="check_btn" class=" word-display fontSize">
+            API , Toastify 사용하기 Project
+        </div>
         <div class="word-input-box ">
             <input type="text" class="word-input" />
         </div>
