--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body ondragstart="return false" onselectstart="return false">
 
     <div class="header">
-        <h1>Let's Typing Game!</h1>
+        <h1>Let's Typing Game!!</h1>
     </div>
 
     <div class="progress">
